Initial DatExt merge
Bringing external datext.qdp code to GPTP

--- a/GPTP/GPTP.vcxproj
+++ b/GPTP/GPTP.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -14,18 +14,19 @@
     <ProjectGuid>{BAE0A287-3166-4C79-9F90-0C6A6DDB5A69}</ProjectGuid>
     <RootNamespace>GPTP</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>
+    </WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -130,6 +131,20 @@
     <ClCompile Include="hooks\cloak_tech_inject.cpp" />
     <ClCompile Include="hooks\create_init_units.cpp" />
     <ClCompile Include="hooks\create_init_units_inject.cpp" />
+    <ClCompile Include="DatExtend\datext.cpp" />
+    <ClCompile Include="hooks\DatExtend\dat_load.cpp" />
+    <ClCompile Include="hooks\DatExtend\dat_load_inject.cpp" />
+    <ClCompile Include="DatExtend\flingy_dat.cpp" />
+    <ClCompile Include="DatExtend\images_dat.cpp" />
+    <ClCompile Include="DatExtend\mapdata_dat.cpp" />
+    <ClCompile Include="DatExtend\orders_dat.cpp" />
+    <ClCompile Include="DatExtend\portdata_dat.cpp" />
+    <ClCompile Include="DatExtend\sfxdata_dat.cpp" />
+    <ClCompile Include="DatExtend\sprites_dat.cpp" />
+    <ClCompile Include="DatExtend\techdata_dat.cpp" />
+    <ClCompile Include="DatExtend\units_dat.cpp" />
+    <ClCompile Include="DatExtend\upgrades_dat.cpp" />
+    <ClCompile Include="DatExtend\weapons_dat.cpp" />
     <ClCompile Include="hooks\detector.cpp" />
     <ClCompile Include="hooks\detector_inject.cpp" />
     <ClCompile Include="hooks\give_unit.cpp" />
@@ -185,7 +200,7 @@
     <ClCompile Include="hooks\orders\doodad_orders.cpp" />
     <ClCompile Include="hooks\orders\doodad_orders_inject.cpp" />
     <ClCompile Include="hooks\orders\critter_order.cpp" />
-    <ClCompile Include="hooks\orders\critter_order_inject.cpp" />    
+    <ClCompile Include="hooks\orders\critter_order_inject.cpp" />
     <ClCompile Include="hooks\orders\rescuable_order.cpp" />
     <ClCompile Include="hooks\orders\rescuable_order_inject.cpp" />
     <ClCompile Include="hooks\orders\base_orders\patrol_order.cpp" />
@@ -211,13 +226,13 @@
     <ClCompile Include="hooks\orders\powerup.cpp" />
     <ClCompile Include="hooks\orders\powerup_inject.cpp" />
     <ClCompile Include="hooks\orders\shield_recharge_orders.cpp" />
-    <ClCompile Include="hooks\orders\shield_recharge_orders_inject.cpp" />    
+    <ClCompile Include="hooks\orders\shield_recharge_orders_inject.cpp" />
     <ClCompile Include="hooks\orders\base_orders\attack_orders.cpp" />
     <ClCompile Include="hooks\orders\base_orders\attack_orders_inject.cpp" />
     <ClCompile Include="hooks\orders\base_orders\die_orders.cpp" />
     <ClCompile Include="hooks\orders\base_orders\die_orders_inject.cpp" />
     <ClCompile Include="hooks\orders\base_orders\move_orders.cpp" />
-    <ClCompile Include="hooks\orders\base_orders\move_orders_inject.cpp" />    
+    <ClCompile Include="hooks\orders\base_orders\move_orders_inject.cpp" />
     <ClCompile Include="hooks\orders\base_orders\stopholdpos_orders.cpp" />
     <ClCompile Include="hooks\orders\base_orders\stopholdpos_orders_inject.cpp" />
     <ClCompile Include="hooks\orders\building_making\building_morph.cpp" />
@@ -243,7 +258,7 @@
     <ClCompile Include="hooks\orders\merge_units.cpp" />
     <ClCompile Include="hooks\orders\merge_units_inject.cpp" />
     <ClCompile Include="hooks\orders\shrouded_order.cpp" />
-    <ClCompile Include="hooks\orders\shrouded_order_inject.cpp" />    
+    <ClCompile Include="hooks\orders\shrouded_order_inject.cpp" />
     <ClCompile Include="hooks\orders\repair_order.cpp" />
     <ClCompile Include="hooks\orders\repair_order_inject.cpp" />
     <ClCompile Include="hooks\orders\research_upgrade_orders.cpp" />
@@ -263,7 +278,7 @@
     <ClCompile Include="hooks\orders\spells\recall_spell.cpp" />
     <ClCompile Include="hooks\orders\spells\recall_spell_inject.cpp" />
     <ClCompile Include="hooks\orders\reset_collision.cpp" />
-    <ClCompile Include="hooks\orders\reset_collision_inject.cpp" />    
+    <ClCompile Include="hooks\orders\reset_collision_inject.cpp" />
     <ClCompile Include="hooks\orders\unit_making\unit_morph.cpp" />
     <ClCompile Include="hooks\orders\unit_making\unit_morph_inject.cpp" />
     <ClCompile Include="hooks\orders\unit_making\unit_train.cpp" />
@@ -293,7 +308,7 @@
     <ClCompile Include="hooks\recv_commands\CMDRECV_Morph.cpp" />
     <ClCompile Include="hooks\recv_commands\CMDRECV_Morph_inject.cpp" />
     <ClCompile Include="hooks\recv_commands\CMDRECV_QueuedOrder.cpp" />
-    <ClCompile Include="hooks\recv_commands\CMDRECV_QueuedOrder_inject.cpp" />    
+    <ClCompile Include="hooks\recv_commands\CMDRECV_QueuedOrder_inject.cpp" />
     <ClCompile Include="hooks\recv_commands\CMDRECV_SiegeTank.cpp" />
     <ClCompile Include="hooks\recv_commands\CMDRECV_SiegeTank_inject.cpp" />
     <ClCompile Include="hooks\recv_commands\CMDRECV_Stop.cpp" />
@@ -309,7 +324,7 @@
     <ClCompile Include="hooks\recv_commands\CMDRECV_RightClick.cpp" />
     <ClCompile Include="hooks\recv_commands\CMDRECV_RightClick_inject.cpp" />
     <ClCompile Include="hooks\recv_commands\CMDRECV_Cloak_Decloak.cpp" />
-    <ClCompile Include="hooks\recv_commands\CMDRECV_Cloak_Decloak_inject.cpp" />    
+    <ClCompile Include="hooks\recv_commands\CMDRECV_Cloak_Decloak_inject.cpp" />
     <ClCompile Include="hooks\recv_commands\train_cmd_receive.cpp" />
     <ClCompile Include="hooks\recv_commands\train_cmd_receive_inject.cpp" />
     <ClCompile Include="hooks\orders\spidermine.cpp" />
@@ -319,7 +334,7 @@
     <ClCompile Include="hooks\tech_target_check.cpp" />
     <ClCompile Include="hooks\tech_target_check_inject.cpp" />
     <ClCompile Include="hooks\right_click_CMDACT.cpp" />
-    <ClCompile Include="hooks\right_click_CMDACT_inject.cpp" />    
+    <ClCompile Include="hooks\right_click_CMDACT_inject.cpp" />
     <ClCompile Include="hooks\transfer_tech_upgrades.cpp" />
     <ClCompile Include="hooks\transfer_tech_upgrades_inject.cpp" />
     <ClCompile Include="hooks\unit_destructor_special.cpp" />
@@ -355,6 +370,7 @@
     <ClCompile Include="Plugin.cpp" />
     <ClCompile Include="plugin_main.cpp" />
     <ClCompile Include="SCBW\api.cpp" />
+    <ClCompile Include="SCBW\scbwdata.cpp" />
     <ClCompile Include="SCBW\structures\CImage.cpp" />
     <ClCompile Include="SCBW\structures\CSprite.cpp" />
     <ClCompile Include="SCBW\structures\CUnit.cpp" />
@@ -377,6 +393,8 @@
     <ClInclude Include="hooks\cloak_nearby_units.h" />
     <ClInclude Include="hooks\cloak_tech.h" />
     <ClInclude Include="hooks\create_init_units.h" />
+    <ClInclude Include="DatExtend\datext.h" />
+    <ClInclude Include="hooks\DatExtend\dat_load.h" />
     <ClInclude Include="hooks\detector.h" />
     <ClInclude Include="hooks\give_unit.h" />
     <ClInclude Include="hooks\harvest.h" />
@@ -404,23 +422,23 @@
     <ClInclude Include="hooks\orders\junkyarddog_order.h" />
     <ClInclude Include="hooks\orders\warpin.h" />
     <ClInclude Include="hooks\orders\doodad_orders.h" />
-    <ClInclude Include="hooks\orders\critter_order.h" />    
+    <ClInclude Include="hooks\orders\critter_order.h" />
     <ClInclude Include="hooks\orders\rescuable_order.h" />
     <ClInclude Include="hooks\orders\base_orders\patrol_order.h" />
     <ClInclude Include="hooks\orders\spells\defense_matrix.h" />
     <ClInclude Include="hooks\orders\spells\scanner_orders.h" />
     <ClInclude Include="hooks\orders\base_orders\rightclick_order.h" />
-    <ClInclude Include="hooks\orders\cloak_nearby_units_order.h" />    
+    <ClInclude Include="hooks\orders\cloak_nearby_units_order.h" />
     <ClInclude Include="hooks\orders\burrow_orders.h" />
     <ClInclude Include="hooks\orders\harvest_orders.h" />
     <ClInclude Include="hooks\orders\larva_order.h" />
-    <ClInclude Include="hooks\orders\interceptor_return_order.h" />    
+    <ClInclude Include="hooks\orders\interceptor_return_order.h" />
     <ClInclude Include="hooks\orders\0_orders\orders_root.h" />
     <ClInclude Include="hooks\orders\powerup.h" />
-    <ClInclude Include="hooks\orders\shield_recharge_orders.h" />    
+    <ClInclude Include="hooks\orders\shield_recharge_orders.h" />
     <ClInclude Include="hooks\orders\base_orders\attack_orders.h" />
     <ClInclude Include="hooks\orders\base_orders\die_orders.h" />
-    <ClInclude Include="hooks\orders\base_orders\move_orders.h" />    
+    <ClInclude Include="hooks\orders\base_orders\move_orders.h" />
     <ClInclude Include="hooks\orders\base_orders\stopholdpos_orders.h" />
     <ClInclude Include="hooks\orders\building_making\building_morph.h" />
     <ClInclude Include="hooks\orders\building_making\building_protoss.h" />
@@ -443,7 +461,7 @@
     <ClInclude Include="hooks\orders\spells\mindcontrol_spell.h" />
     <ClInclude Include="hooks\orders\spells\nuke_orders.h" />
     <ClInclude Include="hooks\orders\spells\recall_spell.h" />
-    <ClInclude Include="hooks\orders\reset_collision.h" />    
+    <ClInclude Include="hooks\orders\reset_collision.h" />
     <ClInclude Include="hooks\orders\unit_making\unit_morph.h" />
     <ClInclude Include="hooks\orders\unit_making\unit_train.h" />
     <ClInclude Include="hooks\psi_field.h" />
@@ -455,7 +473,7 @@
     <ClInclude Include="hooks\recv_commands\CMDRECV_LiftOff.h" />
     <ClInclude Include="hooks\recv_commands\CMDRECV_MergeArchon.h" />
     <ClInclude Include="hooks\recv_commands\CMDRECV_Morph.h" />
-    <ClInclude Include="hooks\recv_commands\CMDRECV_QueuedOrder.h" />    
+    <ClInclude Include="hooks\recv_commands\CMDRECV_QueuedOrder.h" />
     <ClInclude Include="hooks\recv_commands\CMDRECV_SiegeTank.h" />
     <ClInclude Include="hooks\recv_commands\CMDRECV_Stop.h" />
     <ClInclude Include="hooks\recv_commands\receive_command.h" />
@@ -463,7 +481,7 @@
     <ClInclude Include="hooks\recv_commands\CMDRECV_ResearchUpgrade.h" />
     <ClInclude Include="hooks\recv_commands\CMDRECV_Stimpack.h" />
     <ClInclude Include="hooks\recv_commands\CMDRECV_RightClick.h" />
-    <ClInclude Include="hooks\recv_commands\CMDRECV_Cloak_Decloak.h" />    
+    <ClInclude Include="hooks\recv_commands\CMDRECV_Cloak_Decloak.h" />
     <ClInclude Include="hooks\recv_commands\train_cmd_receive.h" />
     <ClInclude Include="hooks\orders\spidermine.h" />
     <ClInclude Include="hooks\stim_packs.h" />
